# SPDX-FileCopyrightText: 2023 Phu Hung Nguyen <phuhnguyen@outlook.com>
# SPDX-License-Identifier: CC0-1.0

[tool.poetry]
name = "markdown-gettext"
version = "0.1.4"
description = "Markdown i18n with gettext"
authors = ["Phu Hung Nguyen <phuhnguyen@outlook.com>"]
license = "LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/phunh/markdown-gettext"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Internationalization",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
packages = [{include = "markdown_gettext"}]

[tool.poetry.dependencies]
python = "^3.8"
polib = "^1.2.0"
PyYAML = [
    {version = "^5.3", python = ">=3.8,<3.10"},
    {version = "^6.0.1", python = ">=3.10"}
]
mdit-py-i18n = "^0.1.0"

[tool.poetry.scripts]
md-gettext = 'markdown_gettext.cli:main'
markdown-gettext = 'markdown_gettext.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
